2021-01-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement much faster vertical grid lines.

	* graph/gbfill.c (gr_fill_hline_*): Accept pitch increment as
	additional argument and act accordingly.
	(grFillVLine, grFillHLine, grFillRect): Updated all callers.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblany.h (*): Blend a bit faster.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Check blending cache earlier.

	This slightly reworks commit bfbd78261beff2d6 by moving the cache
	check into the initialization functions. this is especially important
	to keep the direct span rendering light.

	* graph/gblany.h (*): Move the cache check from here...
	* graph/gblblit.c (gblender_blit_init, grSetTargetPenBrush): ... to
	here.
	* graph/gblender.h (GBLANDER_VARS, GBLENDER_CHANNEL_VARS): Restore old
	macros.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Reduce color conversions in the blender.

	* graph/gblblit.c (GDST_COPY_VAR): Removed.
	(GDST_PIX, GDST_CHANNEL): New macros to convert color.
	(grBlitGlyphToSurface, grSetTargetPenBrush): Pass `grColor' unchanged.
	* graph/gblany.h (*): Use new marcos here.
	* graph/gblblit.h (GBlenderBlitFunc): Accept `grColor'.
	* graph/grobjs.h (grSurface): Use `grColor'.

2021-01-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblany.h: Consolidate for easier editing.
	* graph/gblhbgr.h, graph/gblhrgb.h, graph/gblvbgr.h, graph/gblvrgb.h,
	graph/gblcolor.h, graph/gblbgra.h, graph/gblspans.h: Deleted.

2021-01-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (main): Fix crash.

2021-01-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Do not preset blending cache.

	* graph/gblender.c (gblender_init, gblender_use_channels):
	Use `gblender_clear' instead of...
	(gblender_reset): Removed.

2021-01-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Use faster Set/GetWindowLongPtr.
